# clr-profiler

clr_profiler/src/: ffi.rs  metadata_import.rs  types.rs
clr_profiler/src/traits/: metadata_import_trait.rs
clr_profiler/tests/: basic_integration_test.rs
clr_profiler/tests/common/: mod.rs
test_clr/ClosureMemoryLeak/: Program.cs
test_clr/HelloWorld/: Program.cs
test_clr/TestExceptions/: Program.cs
test_clr/TestThreads/: Program.cs
test_profilers/: Cargo.toml  build.rs
test_profilers/src/: basic_integration_test.rs  client.rs  lib.rs
